# clone-ui-bench

./: .gitignore  README.md  data.json  pyproject.toml
src/: benchmark.py  judge.py  main.py  prompts.py  providers.py  task.py  utils.py
src/browser/: browser.py  screenshot_page.py
src/config/: config.json
src/openrouter/: client.py
src/rate_limiter/: rate_limiter.py
src/tests/: base64_image_string.txt  test_providers.py  test_task.py  test_utils.py
src/utils/: clean_path_for_saveing.py  clean_url.py  load_config.py  parse_responses.py  render_html.py  screenshot_page.py  write_result_to_csv.py
